# build-script

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  sweep.yaml
Docker/: docker-compose.yml  entrypoint.sh
bundledDLL/: version.json
tests/: config_correct.json  conftest.py  test_builder.py  test_config.py  test_config_base.py  test_config_variable.py
usautobuild/: __init__.py  action.py  api_caller.py  builder.py  cli.py  config.py  config_base.py  discord.py  dockerizer.py  exceptions.py  gitter.py  licenser.py  logger.py  messager.py  uploader.py  utils.py
usautobuild/actions/: __init__.py  action.py  api_caller.py  builder.py  discord_changelog_poster.py  dockerizer.py  gitter.py  good_files.py  licenser.py  stable_tagger.py  uploader.py
